# motorloop

./: .gitignore  .zenodo.json  Bender.yml  CHANGELOG.md  CITATION.cff  Containerfile  Makefile  Phobos_Tutorial_Arm.blend  README.md  REUSE.toml  Robot_Assembly_7-3-2026.physics.json  Slider_Crank_Toggle.blend  Test_Mesh_Leg_6-23-2026.gltf  Test_Mesh_Leg_6-23-2026.physics.json  Test_Mesh_Leg_6-23-2026_physics.blend  Test_Mesh_Leg_6-23-2026_physics.glb  Test_Mesh_Leg_7-1-2026.gltf  Test_Mesh_Leg_7-1-2026.physics.json  Test_Mesh_Leg_7-1-2026_drake_report.md  Test_Mesh_Leg_7-1-2026_physics.blend  Test_Mesh_Leg_7-1-2026_physics.glb  VERSIONING.md  adc_sequencer.core  adc_spi_master.core  ads9224r_master.core  as5047p_spi_master.core  as5600_pwm_capture.core  axil_regfile.core  axis_sampler.core  circle_limit.core  circle_limit_seq.core  clarke.core  commutation.core  current_pi.core  divider32.core  docs-lifecycle.toml  drv_manager.core  foc_core.core  inv_park.core  mkdocs.yml  (+22 more)
.devcontainer/: devcontainer.json
sim/cpp/: CMakeLists.txt
sim/cpp/src/: ads9224r.cpp  ads9224r.hpp  as5047p.cpp  as5047p.hpp  as5600.cpp  as5600.hpp  bench.cpp  bench.hpp  bindings.cpp  bindings_focmath.cpp  drv8301.cpp  drv8301.hpp  drv8302.cpp  drv8302.hpp  drv8316r.cpp  drv8316r.hpp  drv8323.cpp  drv8323.hpp  duty_schedule.hpp  feedback_chain.hpp  i_angle_sensor.hpp  i_current_adc.hpp  i_gate_driver.hpp  mcp3208.cpp  mcp3208.hpp  one_phase_plant.cpp  one_phase_plant.hpp  peripheral_factory.cpp  peripheral_factory.hpp  thermal_model.hpp  three_phase_plant.cpp  three_phase_plant.hpp  three_phase_scenario.cpp  three_phase_scenario.hpp
(+630 files in other folders)
